--- a/05-Etapa-DOM/04-04-PopUp/index.html
+++ b/05-Etapa-DOM/04-04-PopUp/index.html
@@ -10,7 +10,7 @@
 
   <div class="popup-wrapper">
     <div class="popup">
-      <div class="popup-close">x</div>
+      <div class="popup-close">X</div>
 
       <div class="popup-content">
         <h2>Popup deselegante</h2>
