--- a/07-Etapa-Aplicacao-Quiz/02-02-Exercicios/index.html
+++ b/07-Etapa-Aplicacao-Quiz/02-02-Exercicios/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -10,10 +9,23 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
     crossorigin="anonymous"
   >
-  <title>Exercícios - Etapa 07</title>
+  <title>Exercício 20</title>
 </head>
 <body>
-  
+  <div class="container">
+    <h1 class="counter-container display-1 text-center">0</h1>
+
+    <div class="row justify-content-center">
+      <button class="button-init-counter btn btn-info col-">
+        Iniciar contador
+      </button>
+
+      <button class="button-stop-counter btn btn-warning col-">
+        Parar contador
+      </button>
+    </div>
+  </div>
+
   <script src="./app.js"></script>
 </body>
 </html>
