Add exercises and resume

--- a/07-Etapa-Aplicacao-Quiz/02-01-Exibindo-Pontuacao/index.html
+++ b/07-Etapa-Aplicacao-Quiz/02-01-Exibindo-Pontuacao/index.html
@@ -13,7 +13,7 @@
     </div>
   </div>
 
-  <div class="result py-4 d-none bg-light text-center">
+  <div class="final-score-container py-4 d-none bg-light text-center">
     <div class="container lead">
       <p>Você acertou
         <span class="text-primary display-4 p-3">0%</span>
@@ -32,13 +32,25 @@
           <div class="form-check my-2 text-white-50">
             <label class="form-check-label">
               <input type="radio" name="inputQuestion1" value="A" checked>
-              Psicose
+              Meu Malvado Favorito
             </label>
           </div>
           <div class="form-check my-2 text-white-50">
             <label class="form-check-label">
               <input type="radio" name="inputQuestion1" value="B">
-              Meu Malvado Favorito
+              Psicose
+            </label>
+          </div>
+          <div class="form-check my-2 text-white-50">
+            <label class="form-check-label">
+              <input type="radio" name="inputQuestion1" value="C">
+              Minha Fama de Mau
+            </label>
+          </div>
+          <div class="form-check my-2 text-white-50">
+            <label class="form-check-label">
+              <input type="radio" name="inputQuestion1" value="D">
+              Mau intencionado
             </label>
           </div>
         </div>
@@ -57,6 +69,18 @@
               O Chamado
             </label>
           </div>
+          <div class="form-check my-2 text-white-50">
+            <label class="form-check-label">
+              <input type="radio" name="inputQuestion2" value="C">
+              O Convidado
+            </label>
+          </div>
+          <div class="form-check my-2 text-white-50">
+            <label class="form-check-label">
+              <input type="radio" name="inputQuestion2" value="D">
+              O Conselho
+            </label>
+          </div>
         </div>
 
         <div class="my-5">
@@ -70,6 +94,18 @@
           <div class="form-check my-2 text-white-50">
             <label class="form-check-label">
               <input type="radio" name="inputQuestion3" value="B">
+              A família em Viagem
+            </label>
+          </div>
+          <div class="form-check my-2 text-white-50">
+            <label class="form-check-label">
+              <input type="radio" name="inputQuestion3" value="C">
+              A Grande Família
+            </label>
+          </div>
+          <div class="form-check my-2 text-white-50">
+            <label class="form-check-label">
+              <input type="radio" name="inputQuestion3" value="D">
               Pequena Miss Sunshine
             </label>
           </div>
@@ -86,7 +122,19 @@
           <div class="form-check my-2 text-white-50">
             <label class="form-check-label">
               <input type="radio" name="inputQuestion4" value="B">
+              Embalos de Sábado à Noite
+            </label>
+          </div>
+          <div class="form-check my-2 text-white-50">
+            <label class="form-check-label">
+              <input type="radio" name="inputQuestion4" value="C">
               Curtindo a Vida Adoidado
+            </label>
+          </div>
+          <div class="form-check my-2 text-white-50">
+            <label class="form-check-label">
+              <input type="radio" name="inputQuestion4" value="D">
+              Se beber, não case
             </label>
           </div>
         </div>
