--- a/11-Etapa-Assincrono/05-03-fetch-API/index.html
+++ b/11-Etapa-Assincrono/05-03-fetch-API/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Fetch API</title>
 </head>
 <body>
+  <h1>Fetch API</h1>
   <script src="./app.js"></script>
 </body>
 </html>
